<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tbm_app_name">TBM Móvel</string>
    <string name="tbm_title_activity_init_config">@string/tbm_app_name</string>
    <string name="tbm_login_error_net">Network error</string>
    <string name="tbm_login_error_auth">Incorrect phone number or password</string>
    <string name="tbm_login_error">Login error</string>
    <string name="tbm_title_initial_configuration">Initial setup</string>
    <string name="tbm_telephone_number">Phone number</string>
    <string name="tbm_initial_password">Initial password</string>
    <string name="tbm_help_what_is_this">What is this?</string>
    <string name="tbm_set_up">Set up</string>
    <string name="tbm_title_activity_main">@string/tbm_app_name</string>
    <string name="tbm_credit">Credit</string>
    <string name="tbm_init_config_help_explanation">You can register your phone wherever TBM Móvel credit is sold. The seller will tell you what code to put here.</string>
    <string name="tbm_echo_calibration_failure">Echo calibration failed</string>
    <string name="tbm_echo_calibration_success">Echo calibration complete</string>

    <string name="tbm_settings_key" translatable="false">tbm_config</string>
    <string name="tbm_setting_acctname" translatable="false">acct</string>
    <string name="tbm_setting_password" translatable="false">pw</string>
    <string name="tbm_sip_realm" translatable="false">sip.tbmcv.com</string>
    <string name="tbm_api_base_url" translatable="false">https://api.tbmcv.com:8608/</string>
</resources>
